# progetto_laboratorio

./: CMakeLists.txt  README.md
include/: Book.h  BookShelf.h  Date.h
src/: Book.cpp  BookShelf.cpp  Date.cpp  main.cpp
